# ParquetView

./: .gitignore  README.md  install.sh  package-lock.json  package.json
docs/: index.html
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
