[package]
name = "pqviewer"
version = "1.0.0"
description = "A fast, native macOS viewer for Apache Parquet files"
authors = ["fcatus"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
regex = "1"
arrow = "54"
parquet = "54"

[profile.release]
opt-level = 2
strip = true
panic = "abort"
